@@ -1,3 +1,7 @@
+[B]Version 1.0.7 - 30 Dec 2016[/B]
+- Abroad India Live TV code refine
+- Tamilgun domain change
+
 [B]Version 1.0.6 - 22 Dec 2016[/B]
 - Abroad India Live TV code refine
 
